2002-04-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): set the
	mnemonic (doh).

2002-04-09  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): don't re-build
	accel labels when we don't need to, freeze / thaw
	the label appropriately.

2002-04-06  Michael Meeks  <michael@ximian.com>

	* tests/test-focus.c (add_control): split out.
	(main): from here & add 'new control' button.

2002-04-09  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_size_allocate):
	Remove space around toolbar handle widget so it looks like the
	gnome 1.4 handle.

2002-04-03  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-ui-container.h: include gmacros.h before using a
	macro defined there (fixes nautilus build errors)

2002-04-01  Murray Cumming  <murrayc@usa.net>

	* bonobo/bonobo-a11y.h, bonobo/bonobo-control-internal.h,
	bonobo/bonobo-ui-container.h, bonobo/bonobo-ui-node-private.h,
	bonobo/bonobo-ui-node.h, bonobo/bonobo-ui-private.h,
	bonobo/bonobo-ui-util.h, bonobo/bonobo-ui-xml.h,
	bonobo/bonobo-window.h:	
	Added G_BEGIN_DECLS/G_END_DECLS for use with C++.

2002-03-29  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-plug.c: (bonobo_plug_button_event): ungrab the
	pointer here, so our parents can do grabs.

2002-04-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(create_dockitem): remove bogus double
	detachable check.
	(impl_bonobo_ui_sync_toolbar_update_root):
	set detachable (or not) on sync.

	* bonobo/bonobo-dock-item.c
	(bonobo_dock_item_set_locked): impl.

2002-03-28  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-selector.c (signals): 
	* bonobo/bonobo-ui-engine.c (signals): these should be static

2002-03-28  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(create_control): do an explicit construct to avoid
	the warning.

	* bonobo/bonobo-widget.c