@@ -1,5 +1,11 @@
 2002-04-11  Michael Meeks  <michael@ximian.com>
 
+	* bonobo/bonobo-ui-sync-menu.c (label_same):
+	do proper label comparisons.
+	(str_uscore_equal): kill, not needed now.
+
+2002-04-11  Michael Meeks  <michael@ximian.com>
+
 	* bonobo/bonobo-ui-sync-menu.c
 	(impl_bonobo_ui_sync_menu_state): set the
 	mnemonic (doh).
